# avoiding-collinearity

./: .gitignore  README.md  citation.cff  collinearity_data.csv
cargo/count-collinear/: Cargo.toml  Dockerfile  defaults.conf  dockerfile
cargo/count-collinear/src/: aws_request.rs  aws_signing.rs  compute.rs  dynamo_db.rs  ec2.rs  email.rs  lib.rs  main.rs  readers.rs  runner.rs  settings.rs  sqs.rs  utilities.rs  writers.rs
cargo/count-collinear/src/readers/: args_reader.rs  sqs_reader.rs  stdin_reader.rs
cargo/count-collinear/src/writers/: dynamo_db_writer.rs  email_writer.rs  stdout_writer.rs
maven/: pom.xml
src/: AbstractNumber.java  Arithmetic.java  AssertBoundedDistanceRatio.java  AssertBoundedMaxDistance.java  AssertBoundedMinDistance.java  CommonMath.java  CountCollinearTrapezoids.java  DoubleRep.java  DrawTrapezoids.java  EarliestSubwordMatch.java  EventPoint.java  EventPointComparator.java  FenwickTree.java  Fraction.java  FractionFactory.java  IndexOfLastNewSubword.java  Interval.java  LineFactory.java  LineSegment.java  Magnitude.java  Main.java  Point.java  PointComparator.java  PointFactory.java  PrintSymbolSequence.java  RadialPoint.java  SegmentTreeNode.java  SymbolSequence.java  Trapezoid.java  TrapezoidDimensions.java  TrapezoidDrawer.java  TrapezoidFactory.java  TrapezoidSequence.java  TrapezoidType.java  Vector.java  VectorFactory.java  WholeAndRt3.java  WholeNumber.java  Wholes.java
tests/: FenwickTreeTests.java  FractionTests.java  LineTests.java  PointComparatorTests.java  PointTests.java  TrapezoidSequenceTests.java  TrapezoidTests.java  (+2 more)
(+52 files in other folders)
