[package]
name = "count-collinear"
version = "0.1.0"
edition = "2021"
authors = ["Finn Lidbetter"]
default-run = "count_collinear"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
chrono = "0.4.23"
configparser = "3.0.2"
dirs = "4.0.0"
http = "0.2.8"
sha2 = "0.10.6"
hmac = "0.12.1"
env_logger = "0.9.1"
quick-xml = "0.26.0"
lettre="0.10.1"
log = "0.4.17"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
